--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "dgm",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "private": true,
   "description": "Diesel Generator Maintenance",
-    "keywords": [
-      "react",
-      "reactjs",
-      "aws",
-      "serverless",
-      "diesel",
-      "generator",
-      "maintenance"
-    ],
+  "keywords": [
+    "react",
+    "reactjs",
+    "aws",
+    "serverless",
+    "diesel",
+    "generator",
+    "maintenance"
+  ],
   "homepage": ".",
   "repository": {
     "type": "git",
@@ -24,6 +24,8 @@
   "license": "MIT",
   "main": "src/index.js",
   "dependencies": {
+    "@material-ui/icons": "^1.0.0-beta.42",
+    "material-ui": "^1.0.0-beta.41",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-scripts": "1.1.4"
