--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "main": "src/index.js",
   "dependencies": {
     "@material-ui/icons": "^1.0.0-beta.42",
+    "axios": "^0.18.0",
     "material-ui": "^1.0.0-beta.41",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
