--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dgm",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "private": true,
   "description": "Diesel Generator Maintenance",
   "keywords": [
@@ -30,7 +30,8 @@
     "moment": "^2.22.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "recharts": "^1.0.0-beta.10"
   },
   "scripts": {
     "start": "react-scripts start",
