--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "dgm",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "private": true,
-  "description": "Diesel Generator Maintenance",
+  "description": "Diesel Generator Set Maintenance",
   "keywords": [
     "react",
     "reactjs",
@@ -30,6 +30,7 @@
     "moment": "^2.22.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-json-view": "^1.16.6",
     "react-scripts": "1.1.4",
     "recharts": "^1.0.0-beta.10"
   },
