--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dgm",
-  "version": "0.4.9",
+  "version": "0.4.9a",
   "private": true,
   "description": "Diesel Generator Set Maintenance",
   "keywords": [
